k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: token-factory-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: token-factory
  template:
    metadata:
     labels:
       app: token-factory
    spec:
      containers:
      - name: token-factory
        image: token-factory
        imagePullPolicy: Never
        ports:
          - containerPort: 3000
