k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: token-factory-service
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: token-factory
