k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: token-manager-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /factory
            pathType: Prefix
            backend:
              service:
                name: token-manager-service
                port:
                  number: 3000
